--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class=" container-fluid menu">
         <div class="row">
             <div class="col-12">
-                <h1 class="display-3">Amelia Lorem</h1>
+                <h1>Amelia Lorem</h1>
             </div>
         </div>
         <div class="row">
@@ -36,18 +36,20 @@
             </nav>
         </div>
     </div>
-    <main class="wrapper">
+    <main class="wrapper container-fluid">
         <main class="content container">
             <article class="about row">
-                <section class="col-12 col-md-4 ">
+                <section class="col-12 col-md-4">
+                    <div class="imagen"></div>
+
                 </section>
-                <section class="col-12 col-md-4 ">
+                <section class="col-12 col-md-4">
                     <h3><span>01.</span>Sobre Mi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure odio sint esse expedita nulla ipsam similique
                         veniam numquam ad? Velit earum consequatur et corrupti dolorum quos minus. Esse, reiciendis! Molestias
                         incidunt esse error vitae!</p>
                 </section>
-                <section class=" col-12 col-md-4">
+                <section class="col-12 col-md-4">
                     <h2>conoceme</h2>
                 </section>
             </article>
@@ -57,14 +59,13 @@
                     <h2>carrera</h2>
                 </section>
                 <section class="col-12 col-md-4">
-                    
+                    <div class="imagen"></div>
                 </section>
                 <section class="col-12 col-md-4">
                     <h3><span>02.</span>Carrera</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum veritatis, quia quam quod nesciunt
                         id officia sint iusto illo, nisi autem accusamus consequuntur!</p>
                 </section>
-
             </article>
             <!-- finalizando creation -->
             <article class="portfolio row">
@@ -90,7 +91,7 @@
                 </section>
             </article>
             <!-- finalizando portfolio -->
-            <article class="flex contact row">
+             <article class="flex contact row">
                 <section class="col-12 col-md-4">
                     <h3><span>04.</span>Contacto</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure odio sint esse expedita nulla ipsam similique
@@ -101,14 +102,16 @@
                     <h2>contacto</h2>
                 </section>
                 <section class=" col-12 col-md-4">
-                    <div class="form-group">
-                        <label for="email"></label>
-                        <input type="email" id="email" class="form-control" placeholder="Ingrese su Email" aria-describedby="helpMail">
-                        <small id="helpMail" class="text-white">NO COMPARTIMOS SU EMAIL CON TERCEROS</small>
-                    </div>
-                    <button class="btn" type="submit">Enviar</button>
+                    <form id="frmContacto">
+                        <div class="form-group">
+                            <label for="email"></label>
+                            <input type="email" id="email" class="form-control" placeholder="Ingrese su Email" aria-describedby="helpMail" required minlength="4" maxlength="50" title="Ingrese su correo micorreo@domino.com.co" >
+                            <small id="helpMail" class="text-white">NO COMPARTIMOS SU EMAIL CON TERCEROS</small>
+                        </div>
+                        <button class="btn" type="submit">Enviar</button>
+                    </form>
                 </section>
-            </article>
+            </article>  
             <!-- finalizando contact -->
         </main>
     </main>
@@ -122,6 +125,7 @@
         crossorigin="anonymous"></script>
 
     <!-- mis scripts -->
+    <script src="js/misScripts.js"></script>
 
 </body>
 
